--- a/index.html
+++ b/index.html
@@ -5,35 +5,73 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
+<!-- main content -->
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
+        <a href="./index.html">WEBSTUDIO</a> <!-- logo -->
+
+        <nav> <!-- navigation -->
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
+        <!-- contacts -->
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
+
     <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home section of the website.</p>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
         </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>This section contains information about us.</p>
+
+        <section>
+            <h2>Strategy</h2>
+            <p>
+                Our goal is to identify the business problem to walk away with 
+                the perfect and creative solution.
+            </p>
         </section>
-        <section id="services">
-            <h2>Services</h2>
-            <p>Details about the services we offer can be found here.</p>
+        <section>
+            <h2>Punctuality</h2>
+            <p>
+                Bring the key message to the brand's audience for the best price within 
+                the shortest possible time.
+            </p>
         </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>You can reach us through this section.</p>
+        <section>
+            <h2>Diligence</h2>
+            <p>
+                Research and confirm brands with the strongest digital growth 
+                opportunities and minimize risk.
+            </p>
         </section>
+        <section>
+            <h2>Technologies</h2>
+            <p>Design practice focused on digital experiences. 
+                We bring forth a deep passion for problem-solving.
+            </p>
+        </section>
+
+         <section> <!-- team list + photo -->
+            <ul>
+                <li>
+            <h2>Our Team</h2>
+            <img src="./images/Mark Guerrero.jpg" width="264" alt="Mark Guerrero" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/Tom Ford.jpg" width="264" alt="Tom Ford" />
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+            </ul>
+         </section>
+
     </main>
     <footer>
         <p>&copy; 2024 My Website</p>
