--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
 <!-- main content -->
@@ -18,8 +18,10 @@
             </ul>
         </nav>
         <!-- contacts -->
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
     </header>
 
     <main>
@@ -57,24 +59,37 @@
         </section>
 
          <section> <!-- team list + photo -->
+            <h2>Our Team</h2>
             <ul>
                 <li>
-            <h2>Our Team</h2>
-            <img src="./images/Mark Guerrero.jpg" width="264" alt="Mark Guerrero" />
+            <img src="./images/Mark-Guerrero.jpg" width="264" alt="Mark Guerrero" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Tom Ford.jpg" width="264" alt="Tom Ford" />
+                    <img src="./images/Tom-Ford.jpg" width="264" alt="Tom Ford" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
+                <li>
+                    <img src="./images/Camila-Garcia.jpg" width="264" alt="Camila Garcia" />
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/Daniel-Wilson.jpg" width="264" alt="Daniel Wilson" />
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
             </ul>
          </section>
-
     </main>
+
     <footer>
-        <p>&copy; 2024 My Website</p>
+        <a href="./index.html">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with 
+            digital marketing & growth solutions.
+        </p>
     </footer>   
 </body>
 </html>
