--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <!-- main content -->
 <body>
     <header>
-        <!-- logo -->
-        <a href="./index.html">WebStudio</a>
-    
         <!-- navigation -->
         <nav> 
+            <!-- logo -->
+            <a href="./index.html">WebStudio</a>
+            <!-- menu -->
             <ul>
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
