--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-            <img src="./images/Mark-Guerrero.jpg" width="264" alt="MarkGuerrero" />
+            <img src="./images/Mark-Guerrero.jpg" width="264" alt="markguerrero" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Tom-Ford.jpg" width="264" alt="TomFord" />
+                    <img src="./images/Tom-Ford.jpg" width="264" alt="tomford" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Camila-Garcia.jpg" width="264" alt="CamilaGarcia" />
+                    <img src="./images/Camila-Garcia.jpg" width="264" alt="camilagarcia" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Daniel-Wilson.jpg" width="264" alt="DanielWilson" />
+                    <img src="./images/Daniel-Wilson.jpg" width="264" alt="danielwilson" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
